tests/integration/features/document_fragments/_validations/01_document_file_path_must_be_sdoc/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: [DOCUMENT_FROM_FILE]: A document file name must have ".sdoc" extension: nested.foo.
